--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,31 @@
-<h1>Hello world!</h1>
+<div class="container">
+  <h1>Hello world!</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Hi</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let coin of coins">
-      <td>
-        {{ coin.name }}
-      </td>
-    </tr>
-  </tbody>
-</table>
+  <table class="table table-dark">
+    <thead>
+      <tr>
+        <th *ngFor="let title of titles">{{ title }}</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let user of users">
+        <td>
+          <span>
+            {{ user.id }}
+          </span>
+        </td>
+        <td>
+          <span>
+            {{ user.name }}
+          </span>
+        </td>
+        <td>
+          {{ user.username }}
+        </td>
+        <td>
+          {{ user.email }}
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
