--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,14 @@
 <div class="container">
   <h1>Hello world!</h1>
 
+  <input
+    type="text"
+    class="form-control bg-dark text-light border-0 my-4 text-center rounded-0"
+    placeholder="Search..."
+    (keyup)="searchUser()"
+    [(ngModel)]="searchText"
+  />
+
   <table class="table table-dark">
     <thead>
       <tr>
